--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(https://s2-techtudo.glbimg.com/teSQDUYwN9ZuGoFASqQJRLXfLWU=/0x0:620x349/600x0/smart/filters:gifv():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2021/F/L/6h8cWjR4W6IYgywE3SyA/2013-08-08-minecraft-pc-10-curiosidades.jpg);
+    background: url('https://s2-techtudo.glbimg.com/teSQDUYwN9ZuGoFASqQJRLXfLWU=/0x0:620x349/600x0/smart/filters:gifv():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2021/F/L/6h8cWjR4W6IYgywE3SyA/2013-08-08-minecraft-pc-10-curiosidades.jpg');
     background-position: center;
 }
 
@@ -20,7 +20,7 @@ body {
     width: 420px;
     background-color: transparent;
     border: 2px solid rgba (255,255,255, .2);
-    border-radius: 10px;
+    border-radius: 40px;
     color:#fff;
     padding: 30px 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
@@ -28,35 +28,36 @@ body {
 }
 
 .container h1 {
-    font-size: 36px;
+    font-size: 50px;
     text-align: center;
 }
 
-.inpunt-box {
+.input-box {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 
-.inpunt-box inpunt {
+.input-box input {
     width: 100%;
     height: 100%;
     background-color: transparent;
     border:  2px solid rgba (255,255,255, .2);
+    border-radius: 20px;
     outline: none;
     font-size: 16px;
-    color:#fff
+    color:#fff;
     padding: 20px 45px 20px 20px;
 }
 
-.inpunt-box input::placeholder{
+.input-box input::placeholder{
     color: #c5c5c5;
 }
 
-.inpunt-box i {
+.input-box i {
     position: absolute;
-    right: 25%;
+    right: 25px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
